--- a/sample_data/scRNA_subsetting.ipynb
+++ b/sample_data/scRNA_subsetting.ipynb
@@ -136,6 +136,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 130,
+   "id": "0362ee14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter\n",
+    "# The sample data is already filtered. The parameters are as follows:\n",
+    "# min nCount of RNA 501\n",
+    "# max nCount of RNA 79534\n",
+    "# min nFeature of RNA (gene) 54 \n",
+    "# max nFeature of RNA (gene) 7211\n",
+    "# min percent of mt 0\n",
+    "# max percent of mt 97\n",
+    "\n",
+    "# sc.pp.filter_cells(adata_subset, min_genes=200)\n",
+    "# sc.pp.filter_genes(adata_subset, min_cells=3)\n",
+    "# print(adata_subset)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 106,
    "id": "1057c21c",
    "metadata": {},
@@ -976,49 +997,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 133,
    "id": "c37260f8",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save the file\n",
-    "output=\"single_cell_sample_data\"+\".csv\"\n",
-    "df_join.to_csv(Path(dir,output), sep=',')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24a6b934",
-   "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/hsieh/opt/anaconda3/lib/python3.9/site-packages/scanpy/preprocessing/_simple.py:140: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "  adata.obs['n_genes'] = number\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AnnData object with n_obs × n_vars = 8311 × 22075\n",
-      "    obs: 'FACS.selection', 'age', 'cell', 'cell_ontology_class', 'cell_ontology_id', 'free_annotation', 'method', 'mouse.id', 'sex', 'subtissue', 'tissue', 'n_genes', 'n_counts', 'louvain', 'leiden'\n",
-      "    var: 'n_cells', 'means', 'dispersions', 'dispersions_norm', 'highly_variable'\n",
-      "    uns: 'leiden', 'louvain', 'louvain_colors', 'neighbors', 'pca', 'tissue_colors'\n",
-      "    obsm: 'X_pca', 'X_umap'\n",
-      "    varm: 'PCs'\n",
-      "    obsp: 'distances', 'connectivities'\n"
+      "1177\n"
      ]
     }
    ],
    "source": [
-    "# Filter cells\n",
-    "sc.pp.filter_cells(adata_subset, min_genes=200)\n",
-    "sc.pp.filter_genes(adata_subset, min_cells=3)\n",
-    "print(adata_subset)"
+    "# Save a fraction of the file\n",
+    "output=\"single_cell_sample_data\"+\".csv\"\n",
+    "df_write = df_join.sample(frac=0.10)\n",
+    "df_write.to_csv(Path(dir,output), sep=',')\n",
+    "print(\"Write \"+len(df_write.index)+\" cells into the file\")"
    ]
   }
  ],
