--- a/sample_data/scRNA_subsetting.ipynb
+++ b/sample_data/scRNA_subsetting.ipynb
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 136,
    "id": "c37260f8",
    "metadata": {},
    "outputs": [
@@ -1005,16 +1005,414 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1177\n"
+      "Write 588 cells into the file\n"
      ]
     }
    ],
    "source": [
     "# Save a fraction of the file\n",
     "output=\"single_cell_sample_data\"+\".csv\"\n",
-    "df_write = df_join.sample(frac=0.10)\n",
+    "df_write = df_join.sample(frac=0.05)\n",
     "df_write.to_csv(Path(dir,output), sep=',')\n",
-    "print(\"Write \"+len(df_write.index)+\" cells into the file\")"
+    "print(f'Write {len(df_write.index)} cells into the file')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "ea8aca25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MIR1302-2HG</th>\n",
+       "      <th>FAM138A</th>\n",
+       "      <th>OR4F5</th>\n",
+       "      <th>AL627309.1</th>\n",
+       "      <th>AL627309.3</th>\n",
+       "      <th>AL627309.2</th>\n",
+       "      <th>AL627309.4</th>\n",
+       "      <th>AL732372.1</th>\n",
+       "      <th>OR4F29</th>\n",
+       "      <th>AC114498.1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>BX072566.1</th>\n",
+       "      <th>AL354822.1</th>\n",
+       "      <th>AC023491.2</th>\n",
+       "      <th>AC004556.1</th>\n",
+       "      <th>AC233755.2</th>\n",
+       "      <th>AC233755.1</th>\n",
+       "      <th>AC240274.1</th>\n",
+       "      <th>AC213203.1</th>\n",
+       "      <th>FAM231C</th>\n",
+       "      <th>predicted.celltype.l2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cell</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>GGACGTCGTTGCAAGG-1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>CD14 Mono</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CGACAGCAGGTAAGAG-1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>cDC2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ATGGGAGCAGTCAGAG-1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>CD8 Naive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AGCGCCATCAACTTTC-1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>CD4 TCM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CATCCCAGTATCGAGG-1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>CD14 Mono</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GGGCGTTTCGGCTATA-1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>CD14 Mono</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ACACCAACAATCGTCA-1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>CD14 Mono</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GCAGTTACATCTCGTC-1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Eryth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ACCTGTCCACTTGTCC-1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>CD14 Mono</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CAGATCACATCCAACA-1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>B memory</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 33539 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    MIR1302-2HG  FAM138A  OR4F5  AL627309.1  AL627309.3  \\\n",
+       "cell                                                                      \n",
+       "GGACGTCGTTGCAAGG-1          0.0      0.0    0.0         0.0         0.0   \n",
+       "CGACAGCAGGTAAGAG-1          0.0      0.0    0.0         0.0         0.0   \n",
+       "ATGGGAGCAGTCAGAG-1          0.0      0.0    0.0         0.0         0.0   \n",
+       "AGCGCCATCAACTTTC-1          0.0      0.0    0.0         0.0         0.0   \n",
+       "CATCCCAGTATCGAGG-1          0.0      0.0    0.0         0.0         0.0   \n",
+       "GGGCGTTTCGGCTATA-1          0.0      0.0    0.0         0.0         0.0   \n",
+       "ACACCAACAATCGTCA-1          0.0      0.0    0.0         0.0         0.0   \n",
+       "GCAGTTACATCTCGTC-1          0.0      0.0    0.0         0.0         0.0   \n",
+       "ACCTGTCCACTTGTCC-1          0.0      0.0    0.0         0.0         0.0   \n",
+       "CAGATCACATCCAACA-1          0.0      0.0    0.0         0.0         0.0   \n",
+       "\n",
+       "                    AL627309.2  AL627309.4  AL732372.1  OR4F29  AC114498.1  \\\n",
+       "cell                                                                         \n",
+       "GGACGTCGTTGCAAGG-1         0.0         0.0         0.0     0.0         0.0   \n",
+       "CGACAGCAGGTAAGAG-1         0.0         0.0         0.0     0.0         0.0   \n",
+       "ATGGGAGCAGTCAGAG-1         0.0         0.0         0.0     0.0         0.0   \n",
+       "AGCGCCATCAACTTTC-1         0.0         0.0         0.0     0.0         0.0   \n",
+       "CATCCCAGTATCGAGG-1         0.0         0.0         0.0     0.0         0.0   \n",
+       "GGGCGTTTCGGCTATA-1         0.0         0.0         0.0     0.0         0.0   \n",
+       "ACACCAACAATCGTCA-1         0.0         0.0         0.0     0.0         0.0   \n",
+       "GCAGTTACATCTCGTC-1         0.0         0.0         0.0     0.0         0.0   \n",
+       "ACCTGTCCACTTGTCC-1         0.0         0.0         0.0     0.0         0.0   \n",
+       "CAGATCACATCCAACA-1         0.0         0.0         0.0     0.0         0.0   \n",
+       "\n",
+       "                    ...  BX072566.1  AL354822.1  AC023491.2  AC004556.1  \\\n",
+       "cell                ...                                                   \n",
+       "GGACGTCGTTGCAAGG-1  ...         0.0         0.0         0.0         0.0   \n",
+       "CGACAGCAGGTAAGAG-1  ...         0.0         0.0         0.0         0.0   \n",
+       "ATGGGAGCAGTCAGAG-1  ...         0.0         0.0         0.0         0.0   \n",
+       "AGCGCCATCAACTTTC-1  ...         0.0         0.0         0.0         0.0   \n",
+       "CATCCCAGTATCGAGG-1  ...         0.0         0.0         0.0         0.0   \n",
+       "GGGCGTTTCGGCTATA-1  ...         0.0         0.0         0.0         0.0   \n",
+       "ACACCAACAATCGTCA-1  ...         0.0         0.0         0.0         0.0   \n",
+       "GCAGTTACATCTCGTC-1  ...         0.0         0.0         0.0         0.0   \n",
+       "ACCTGTCCACTTGTCC-1  ...         0.0         0.0         0.0         0.0   \n",
+       "CAGATCACATCCAACA-1  ...         0.0         0.0         0.0         0.0   \n",
+       "\n",
+       "                    AC233755.2  AC233755.1  AC240274.1  AC213203.1  FAM231C  \\\n",
+       "cell                                                                          \n",
+       "GGACGTCGTTGCAAGG-1         0.0         0.0         0.0         0.0      0.0   \n",
+       "CGACAGCAGGTAAGAG-1         0.0         0.0         0.0         0.0      0.0   \n",
+       "ATGGGAGCAGTCAGAG-1         0.0         0.0         0.0         0.0      0.0   \n",
+       "AGCGCCATCAACTTTC-1         0.0         0.0         0.0         0.0      0.0   \n",
+       "CATCCCAGTATCGAGG-1         0.0         0.0         0.0         0.0      0.0   \n",
+       "GGGCGTTTCGGCTATA-1         0.0         0.0         0.0         0.0      0.0   \n",
+       "ACACCAACAATCGTCA-1         0.0         0.0         0.0         0.0      0.0   \n",
+       "GCAGTTACATCTCGTC-1         0.0         0.0         0.0         0.0      0.0   \n",
+       "ACCTGTCCACTTGTCC-1         0.0         0.0         0.0         0.0      0.0   \n",
+       "CAGATCACATCCAACA-1         0.0         0.0         0.0         0.0      0.0   \n",
+       "\n",
+       "                    predicted.celltype.l2  \n",
+       "cell                                       \n",
+       "GGACGTCGTTGCAAGG-1              CD14 Mono  \n",
+       "CGACAGCAGGTAAGAG-1                   cDC2  \n",
+       "ATGGGAGCAGTCAGAG-1              CD8 Naive  \n",
+       "AGCGCCATCAACTTTC-1                CD4 TCM  \n",
+       "CATCCCAGTATCGAGG-1              CD14 Mono  \n",
+       "GGGCGTTTCGGCTATA-1              CD14 Mono  \n",
+       "ACACCAACAATCGTCA-1              CD14 Mono  \n",
+       "GCAGTTACATCTCGTC-1                  Eryth  \n",
+       "ACCTGTCCACTTGTCC-1              CD14 Mono  \n",
+       "CAGATCACATCCAACA-1               B memory  \n",
+       "\n",
+       "[10 rows x 33539 columns]"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_write.head(10)"
    ]
   }
  ],
